# toolium

./: .codeclimate.yml  .gitignore  .landscape.yml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  MANIFEST.in  Makefile  README.md  README.rst  VERSION  pip.conf  pylint.rc  pyproject.toml  pytest.ini  requirements.txt  requirements_ai.txt  requirements_dev.txt  requirements_playwright.txt  setup.py  sonar-project.properties  tox.ini
.github/workflows/: ci.yml
docs/: Jira.rst  Makefile  ai_utils.rst  bdd_integration.rst  browser_configuration.rst  conf.py  driver_configuration.rst  driver_configuration_modification.rst  index.rst  mobile_configuration.rst  multiple_drivers.rst  page_objects.rst  pageobjects_specification_files.rst  playwright_configuration.rst  remote_configuration.rst  requirements.txt  reuse_driver.rst  tests_result_analysis.rst  tests_runners_integration.rst  toolium.behave.rst  toolium.lettuce.rst  toolium.pageelements.playwright.rst  toolium.pageelements.rst  toolium.pageobjects.rst  toolium.rst  toolium.utils.ai_utils.rst  toolium.utils.rst  visual_testing.rst
docs/src-docs/: Makefile
docs/src-docs/source/: conf.py  index.rst  selenium_tid_python.pageelements.rst  selenium_tid_python.pageobjects.rst  selenium_tid_python.rst  seleniumtid.lettuce.rst  seleniumtid.pageelements.rst  seleniumtid.pageobjects.rst  seleniumtid.rst  toolium.lettuce.rst  toolium.pageelements.rst  toolium.pageobjects.rst  toolium.rst
selenium_tid_python/: __init__.py  config.py  jira.py  selenium_test_case.py  selenium_wrapper.py  utils.py
selenium_tid_python/pageelements/: page_element.py  select_page_element.py  text_input_page_element.py  text_page_element.py
seleniumtid/: __init__.py  config.py  config_driver.py  config_parser.py  jira.py  selenium_test_case.py  selenium_wrapper.py  test_cases.py  utils.py  visual_test.py
seleniumtid/lettuce/: terrain.py
seleniumtid/pageelements/: __init__.py  button_page_element.py  input_text_page_element.py  page_element.py  select_page_element.py  text_input_page_element.py  text_page_element.py
seleniumtid/pageobjects/: page_object.py
seleniumtid/resources/: VisualTestsTemplate.html
seleniumtid/test/: test_config_parser.py  test_selenium_wrapper.py  test_visual_test.py
seleniumtid/test/conf/: logging.conf  properties.cfg  (+1 more)
toolium/: __init__.py  config_driver.py  config_driver_playwright.py  config_files.py  config_parser.py  driver_wrapper.py  driver_wrappers_pool.py  format_utils.py  jira.py  path_utils.py  pytest_fixtures.py  selenium_wrapper.py  selenoid.py  test_cases.py  utils.py  visual_test.py
toolium/behave/: env_utils.py  environment.py
toolium/lettuce/: terrain.py
toolium/pageelements/: __init__.py  button_page_element.py  checkbox_page_element.py  group_page_element.py  input_radio_page_element.py  input_text_page_element.py  link_page_element.py  page_element.py  page_element_model.py  page_elements.py  select_page_element.py  text_page_element.py
toolium/pageobjects/: common_object.py  mobile_page_object.py  page_object.py  page_object_model.py  playwright_page_object.py
toolium/resources/: VisualTests.css  VisualTests.js  VisualTestsTemplate.html
toolium/spec_files_loader/: config_spec_files_loader.py  module_utils.py  page_element_spec_loader.py  page_object_spec_loader.py
toolium/test/: conftest.py  test_config_driver.py  test_config_driver_appium.py  test_config_driver_chrome.py  test_config_driver_edge.py  test_config_driver_firefox.py  test_config_driver_iexplore.py  test_config_driver_safari.py  test_config_files.py  test_config_parser.py  test_driver_wrapper.py  test_driver_wrapper_baseline.py  test_driver_wrapper_logger.py  test_driver_wrapper_properties.py  test_driver_wrappers_pool.py  test_format_utils.py  test_jira.py  test_path_utils.py  test_selenium_wrapper.py  test_test_cases.py  test_utils.py  test_visual_test.py
toolium/utils/: __init__.py  ai_utils.py  data_generator.py  dataset.py  datetime_utils.py  download_files.py  driver_utils.py  driver_wait_utils.py  path_utils.py  poeditor.py
(+69 files in other folders)
