[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toolium"
dynamic = ["version", "dependencies", "optional-dependencies"]
authors = [
    {name = "Rubén González Alonso", email = "ruben.gonzalezalonso@telefonica.com"},
]
description = "Wrapper tool of Selenium and Appium libraries to test web and mobile applications in a single project"
readme = "README.rst"
license = {text = "Apache 2.0"}
keywords = [
    "selenium",
    "appium",
    "webdriver",
    "web_automation",
    "mobile_automation",
    "page_object",
    "visual_testing",
    "ai",
    "bdd",
    "behave",
    "pytest"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Acceptance",
    "Topic :: Software Development :: Testing :: BDD",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/telefonica/toolium"
Repository = "https://github.com/telefonica/toolium"
Documentation = "http://toolium.readthedocs.org/en/latest"
Changelog = "http://toolium.readthedocs.org/en/latest/changelog.html"
"Bug Tracker" = "https://github.com/telefonica/toolium/issues"

[tool.setuptools]
packages = [
    "toolium",
    "toolium.pageobjects",
    "toolium.pageelements",
    "toolium.pageelements.playwright",
    "toolium.behave",
    "toolium.utils",
    "toolium.utils.ai_utils"
]

[tool.setuptools.package-data]
"toolium" = [
    "resources/VisualTestsTemplate.html",
    "resources/VisualTests.js",
    "resources/VisualTests.css"
]

[tool.setuptools.dynamic]
version = {file = "VERSION"}
dependencies = {file = ["requirements.txt"]}
optional-dependencies.playwright = {file = ["requirements_playwright.txt"]}
optional-dependencies.ai = {file = ["requirements_ai.txt"]}
optional-dependencies.dev = {file = ["requirements_dev.txt"]}

[tool.pytest.ini_options]
testpaths = ["toolium/test"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["toolium"]
omit = [
    "*/test*",
    "*/tests/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.ruff]
line-length = 120
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
